test/2/type/sub-sig-field.ploy
f:(Int Int)%Int = fn (Int Int Int)%Int 0@$;

main = exit.f(0 0 0)
